[package]
name = "discord-links-transfer-bot"
version = "0.0.1"
authors = ["tktcorporation"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
tiger = "^0.1"

[dependencies.serenity]
version = "0.10"
features = ["cache", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
